完成后台添加分类接口,编写测试用例