@@ -16,3 +16,11 @@ libraryDependencies ++= Seq(
   javaWs,
   "mysql" % "mysql-connector-java" % mysqlConnectorVersion
 )
+
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
+)
